# QT

calculator/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
coin_game/: CMakeLists.txt  chooselevescene.cpp  chooselevescene.h  mainscene.cpp  mainscene.h  mainscene.ui  mycoin.cpp  mycoin.h  mypushbutton.cpp  mypushbutton.h  playscene.cpp  playscene.h  res.qrc
file_encryption/: CMakeLists.txt  res.qrc  widget.cpp  widget.h  widget.ui
five_step_chess/: CMakeLists.txt  chess.cpp  chess.h  login_scene.cpp  login_scene.h  main.cpp  res.qrc  widget.cpp  widget.h
qq_login2/: CMakeLists.txt  res.qrc  widget.cpp  widget.h
